examples/test/testpolicy3012.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3012
  namespace: namespace167
spec:
  podSelector:
    matchLabels:
      key19: value13
      key44: value16
      key17: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value44
          key15: value10
          key16: value16
      podSelector:
        matchLabels:
          key48: value11
          key13: value8
          key47: value16
